--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+dnspython==2.7.0
 filelock==3.16.1
 Flask==3.1.0
 idna==3.10
@@ -12,8 +13,12 @@ MarkupSafe==3.0.2
 packaging==24.2
 pluggy==1.5.0
 pytest==8.3.3
+python-dateutil==2.9.0.post0
+python-whois==0.9.5
+redis==5.2.0
 requests==2.32.3
 requests-file==2.1.0
+six==1.16.0
 tldextract==5.1.3
 urllib3==2.2.3
 validators==0.34.0
