--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [api, ml_service, threat_intel]
+        service: [api]
 
     steps:
     - uses: actions/checkout@v2
