--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,10 +9,12 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY src /app/src
+
 EXPOSE 8000
 
 ENV FLASK_APP=src/app.py
 ENV FLASK_ENV=development
-ENV PYTHON_PATH=/app
+ENV PYTHONPATH=/app/src
 
 CMD ["flask", "run", "--host=0.0.0.0", "--port=8000"]
