--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -19,6 +19,7 @@ python-whois==0.9.5
 redis==5.2.0
 requests==2.32.3
 requests-file==2.1.0
+schedule==1.2.2
 six==1.16.0
 tldextract==5.1.3
 urllib3==2.2.3
